Attempt at fixing fixed elements on mobile, part 5

--- a/www/style-ultramodern.windows.css
+++ b/www/style-ultramodern.windows.css
@@ -2608,6 +2608,7 @@ div > .MJXc-display {
 		position: fixed;
 		visibility: hidden;
 		opacity: 1.0 !important;
+		z-index: 10000;
 	}
 	#post-nav-ui-toggle {
 		visibility: visible;
